tests/lowering/field-outside-constructor.stderr
error[E017]: field marker `::` used outside of a constructor declaration
 --> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:1
  |
3 | data X (::A: Type): (::m: M) -> X of
  | ------------------------------------ not a constructor
  |
 --> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:9
  |
3 | data X (::A: Type): (::m: M) -> X =
  |         ^^ 
  |

error[E017]: field marker `::` used outside of a constructor declaration
 --> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:1
  |
3 | data X (::A: Type): (::m: M) -> X of
  | ------------------------------------ not a constructor
  |
 --> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:22
  |
3 | data X (::A: Type): (::m: M) -> X of
  |                      ^^ 
  |

error: aborting due to 2 previous errors

